# terra-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  mkversion.py
.github/workflows/: rust.yml
crates/terra-core/: Cargo.toml
crates/terra-core/src/: aes.rs  bool_byte.rs  ext.rs  file_type.rs  journey_powers.rs  lib.rs  loadout.rs  player.rs  shared_string.rs  team.rs  utils.rs
crates/terra-core/src/buff/: buff_data.rs
crates/terra-core/src/item/: item_data.rs
crates/terra-core/src/prefix/: prefix_meta.rs
crates/terra-gui/: Cargo.toml
crates/terra-gui/src/: app.rs  main.rs
crates/terra-gui/src/app/: menus.rs  modals.rs  tabs.rs  tasks.rs
crates/terra-gui/src/app/inventory/: buff_slot.rs  buff_tooltip.rs  item_slot.rs  prefix_tooltip.rs  slot.rs
crates/terra-gui/src/ui/: clickable_frame.rs
crates/terra-res/: .gitignore  Cargo.toml  build.rs
crates/terra-res/resources/: NPCs.json
crates/terra-res/resources/buffs/: .gitignore
crates/terra-res/src/: main.rs
crates/terra-tests/: Cargo.toml
crates/terra-tests/src/: main.rs
data/: items.json  versions.txt
data/resources/: buffs.json  items.json  prefixes.json
scripts/: mkversion.py
src/: ui.rs
src/app/: context.rs  inventory.rs  modals.rs  tabs.rs  visuals.rs
src/app/inventory/: buff_slot.rs  item_slot.rs  item_tooltip.rs
src/ui/: clickable_frame.rs
terra-core/: Cargo.toml
terra-core/src/: aes.rs  bool_byte.rs  buff.rs  difficulty.rs  ext.rs  file_type.rs  io_extensions.rs  item.rs  journey_powers.rs  lib.rs  loadout.rs  meta.rs  player.rs  prefix.rs  spawnpoint.rs  utils.rs
terra-core/src/buff/: buff.rs  buff_data.rs  buff_meta.rs
terra-core/src/item/: item.rs  item_data.rs  item_meta.rs  research_item.rs
terra-core/src/prefix/: prefix.rs  prefix_data.rs  prefix_meta.rs
terra-gui/: Cargo.toml
terra-gui/src/: app.rs  ext.rs  main.rs  ui.rs
terra-gui/src/app/: context.rs  inventory.rs  menus.rs  modals.rs  tabs.rs  tasks.rs  visuals.rs
terra-gui/src/app/inventory/: buff_slot.rs  buff_tooltip.rs  item_slot.rs  item_tooltip.rs  meta.rs  prefix_tooltip.rs  slot.rs
terra-gui/src/app/inventory/meta/: native.rs  wasm.rs
terra-gui/src/ui/: clickable_frame.rs
terra-res/: .gitignore  Cargo.toml  README.md  build.rs
terra-res/resources/: Game.json  Items.json  Legacy.json  Main.json  Projectiles.json  Town.json
terra-res/resources/items/: .gitignore
terra-res/src/: main.rs  truthy.rs
terra-tests/: Cargo.toml
terra-tests/src/: main.rs
terra-tui/: Cargo.toml
terra-tui/src/: main.rs
tests/: .gitignore  Tests.md  v145.plr  v168.plr  v175.plr  v184.plr  v190.plr  v225.plr  v230.plr  v237.plr  v248.plr  v269.plr  v279.plr  v315.plr  v316.plr  v39.plr  v69.plr  v73.plr  v77.plr  v93.plr  v98.plr  テラリア.plr
wix/: main.wxs
