[workspace]
resolver = "2"
members = ["crates/terra-core", "crates/terra-gui", "crates/terra-res", "crates/terra-tests"]

[workspace.package]
repository = "https://github.com/RLGingerBiscuit/terra-rs"
edition = "2021"
rust-version = "1.93"
version = "1.1.1"
authors = ["Ginger Biscuit <rlgingerbiscuit@proton.me>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25.0", features = ["png"] }
time = { version = "0.3.46", default-features = false, features = ["std"] }
terra-core = { path = "crates/terra-core" }

[profile.release]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
