[package]
name = "terra-core"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.44"
anyhow = "1.0.72"
rust-crypto = "0.2.36"
aes-stream = { path = "../aes-stream" }
byteorder = "1.4.3"
bit_reverse = "0.1.8"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_repr = "0.1.15"
serde_with = "3.1.0"
serde-big-array = "0.5.1"
chrono = "0.4.26"
dirs-next = "2.0.0"
