[package]
name = "terra-core"
version = "0.0.1"
edition = "2021"

[dependencies]
aes-stream = { path = "../aes-stream" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.16"
serde_with = "3.3.0"
serde-big-array = "0.5.1"
rust-crypto = "0.2.36"
byteorder = "1.4.3"
bit_reverse = "0.1.8"
chrono = "0.4.31"
dirs-next = "2.0.0"
