[package]
name = "terra-core"
version = "0.0.1"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_repr = { version = "0.1.16", optional = true }
serde_with = { version = "3.3.0", optional = true }
serde-big-array = { version = "0.5.1", optional = true }
byteorder = "1.4.3"
bit_reverse = "0.1.8"
chrono = "0.4.31"
dirs-next = "2.0.0"

[features]
default = ["deserialize"]
serialize = [
    "serde",
    "serde_json",
    "serde_repr",
    "serde_with",
    "serde-big-array",
]
deserialize = [
    "serde",
    "serde_json",
    "serde_repr",
    "serde_with",
    "serde-big-array",
]
