[package]
name = "terra-gui"
version = "0.0.1"
edition = "2021"

[dependencies]
terra-core = { path = "../terra-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19.0"
flume = "0.11.0"
rustc-hash = "1.1.0"
eframe = { version = "0.27.0", features = ["persistence"] }
egui = { version = "0.27.0", features = ["color-hex"] }
catppuccin-egui = { git = "https://github.com/RLGingerBiscuit/catppuccin-egui.git", rev = "5b6815e695f253548aa935cb27cfe643e21b14be" }
egui_dock = { git = "https://github.com/RLGingerBiscuit/egui_dock.git", rev = "0dea391c13f2d376ae6af1943f5f55b2829b8591", features = [
    "serde",
] }
image = { workspace = true }
rfd = "0.14.1"
cfg-if = "1.0.0"
open = "5.1.2"
