[package]
name = "terra-gui"
version = "0.0.1"
edition = "2021"

[dependencies]
terra-core = { path = "../terra-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19.0"
flume = "0.11.0"
rustc-hash = "2.0.0"
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1", features = ["color-hex"] }
catppuccin-egui = { version = "5.2.0", default-features = false, features = [
    "egui28",
] }
egui_dock = { version = "0.13.0", features = ["serde"] }
image = { workspace = true }
rfd = "0.14.1"
cfg-if = "1.0.0"
open = "5.3.0"
