[package]
name = "terra-res"
version = "0.0.1"
edition = "2021"

[dependencies]
terra-core = { path = "../terra-core", default-features = false, features = [
    "serialize",
] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
regex = "1.10.4"
scraper = "0.19.0"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
fs_extra = "1.3.0"
image = { workspace = true }
itertools = "0.12.1"
