[package]
name = "terra-res"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
terra-core = { path = "../terra-core", default-features = false, features = [
    "serialize",
] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
regex = "1.10.6"
scraper = "0.19.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
fs_extra = "1.3.0"
image = { workspace = true }
itertools = "0.13.0"
