[package]
name = "terra-rs"
description = "A Terraria character editor written in Rust"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
default-run = "terra-rs"

[dependencies]
terra-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
once_cell = "1.21.3"
flume = "0.12.0"
eframe = { version = "0.33", features = ["persistence"] }
egui = { version = "0.33", features = ["color-hex"] }
catppuccin-egui = { version = "5.7", default-features = false, features = [
    "egui33",
] }
egui_dock = { version = "0.18", features = ["serde"] }
image = { workspace = true }
rfd = "0.17.2"
cfg-if = "1.0.4"
open = "5.3.3"

[[bin]]
name = "terra-rs"
path = "src/main.rs"
