[package]
name = "terra-res"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
publish = false

[dependencies]
terra-core = { workspace = true, features = ["serialize"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
mlua = { version = "0.10.3", features = ["lua54", "vendored", "error-send"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
fs_extra = "1.3.0"
itertools = "0.14.0"
